Add displayed param on media to unable hiding a message
