# controllers/command.ctrl.js
@@ -7,6 +7,16 @@ const Channels = mongoose.model('Channels');
 const messageTransformer = require('./../transformers/message.transformer');
 
 const self = {
+    deleteMedia: (req, res) => {
+        const messageId = req.params.id;
+        Messages.findOne({messageId: messageId}).then((message) => {
+            if(!message) return res.json({});
+            message.displayed = false;
+            message.save().then(() => {
+                return res.json({});
+            });
+        });
+    },
     modifyChannelActivation: (req, res) => {
         const channelId = req.params.id;
         Channels.findOne({channelId: channelId}).then((channel) => {
